# Cirro-jbrowse-config

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  nextflow.config  pyproject.toml  test_presign.py
.claude/: settings.json
demo-site/: config.json  index.html
docs/: cirro-integration.md  getting-started.md  index.md  track-types.md
src/cirro_jbrowse_config/: __init__.py  generator.py  jbrowse_dist.py
src/cirro_jbrowse_config/cirro/: __init__.py  selector.py  uploader.py
src/cirro_jbrowse_config/cli/: __init__.py  main.py
src/cirro_jbrowse_config/examples/volvox/: inputs.json
src/cirro_jbrowse_config/schemas/: __init__.py  config.schema.json  inputs.schema.json
src/cirro_jbrowse_config/schemas/tracks/: bam.schema.json  bigwig.schema.json  cram.schema.json  gff.schema.json  gtf.schema.json  vcf.schema.json
src/cirro_jbrowse_config/templates/: index.html.j2
src/cirro_jbrowse_config/tracks/: __init__.py  bam.py  base.py  bigwig.py  cram.py  gff.py  gtf.py  vcf.py
tests/: conftest.py  test_cirro.py  test_cli.py  test_demo.py  test_generator.py  test_new_coverage.py  test_schemas.py  test_tracks.py
workflow/: README.md  main.nf  nextflow.config
workflow/cirro/: preprocess.py  process-form.json  process-input.json
workflow/cirro/from_sarek/: preprocess.py  process-form.json  process-input.json
